[FIX] Using immutable lists